[package]
name = "okto"
version = "2.0.0"
authors = ["Calli <me@calli.dev>"]
edition = "2021"
license = "MIT"
description = "A Discord bot for getting information about upcoming rocket launches"

[dependencies.okto_framework]
path = "./okto_framework"
version = "0.1.0"

[dependencies]
serenity = {version="^0.11.5", features=["unstable_discord_api"]}
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
chrono = "0.4.19"
rand = "0.8"
url = "2.3"
regex = "1"
num_cpus = "1.13"
threadpool = "1.8"
tokio = { version = "1", features = ["full"] }
mongodb = "2.2.2"
futures = "0.3"
itertools = "0.10"
http = "0.2.8"
