[package]
name = "okto"
version = "2.0.0"
authors = ["Calli <me@calli.dev>"]
edition = "2021"
license = "MIT"
description = "A Discord bot for getting information about upcoming rocket launches"

[dependencies.okto_framework]
path = "./okto_framework"
version = "0.1.0"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[dependencies]
serenity = {version="0.12.0"}
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
chrono = "0.4.34"
rand = "0.8"
url = "2.5"
regex = "1.10"
num_cpus = "1.16"
threadpool = "1.8"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
mongodb = "2.8"
futures = "0.3"
itertools = "0.12.0"
http = "1.0.0"
serde_regex = "1.1.0"
